实现对话上下文管理与药品名称消歧
- 新增 DrugExtractionService 实现药品名称提取与向量匹配
- 新增 DrugAliasController 支持药品别名管理
- 支持多轮对话历史上下文（最近5轮）
- 向量检索增加 filterExpression 条件过滤
- 混合搜索根据 topK 动态调整检索上限
- 配置 embedding-dimension 从 2560 调整为 1024
- 新增 DrugNameMetadata 和 DrugCandidate 响应结构

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>